<resources>
    <string name="app_name">VaccinePass</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_message"></string>

    <!--
    PIN Activity
    -->
    <string name="pin_title">Enter PIN</string>
    <string name="pin_title_confirm">Confirm PIN</string>
    <string name="pin_title_error">Wrong PIN!</string>
    <string name="pin_title_forgot_pin">Forgot PIN?</string>
    <string name="pin_btn_1">1</string>
    <string name="pin_btn_2">2</string>
    <string name="pin_btn_3">3</string>
    <string name="pin_btn_4">4</string>
    <string name="pin_btn_5">5</string>
    <string name="pin_btn_6">6</string>
    <string name="pin_btn_7">7</string>
    <string name="pin_btn_8">8</string>
    <string name="pin_btn_9">9</string>
    <string name="pin_btn_0">0</string>
    <string name="pin_btn_del">Del</string>

    <string name="title_activity_fragment_test">FragmentTestActivity</string>

    <!--
    Calendar Fragment
    -->
    <string name="fragment_calendar_scheduled_vaccinations">Scheduled vaccinations</string>

    <!--
    bottom nav
    -->
    <string name="bottom_nav_user">User</string>
    <string name="bottom_nav_vaccine">Vaccines</string>
    <string name="bottom_nav_calendar">Calendar</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="bottom_nav_add">Log</string>

    <!--
    Main activity
    -->
    <string name="activity_main_user_pic_description">User Picture for MainView</string>
    <string name="activity_main_user_bloodtype">Blood Type</string>
    <string name="activity_main_user_weight">Weight</string>
    <string name="activity_main_user_height">Height</string>
    <string name="activity_main_user_birth">Birth</string>

    <!--
    add vaccine
    -->
    <string name="add_vaccine_btn_add">Add</string>
    <string name="add_vaccine_btn_cancel">Cancel</string>
    <string name="add_vaccine_lbl_date">Start Date</string>
    <string name="add_vaccine_ic_calendar_description">Calendar Icon</string>
    <string name="add_vaccine_ic_schedule_description">Icon for Schedule</string>
    <string name="add_vaccine_btn_schedule_add">Add to Schedule</string>
    <string name="add_vaccine_lbl_schedule">Schedule</string>
    <string name="add_vaccine_lbl_subtitle_schedule">Remaining treatments</string>
    <string name="add_vaccine_lbl_subtitle_vaccine_name">State of Vaccine</string>

    <!--
    Select activity
    -->
    <string name="activity_select_user_pic_description">Picture for UserSelection</string>
    <string name="activity_select_user_header">Select User:</string>
    <string name="select_user_btn_add">Add User</string>

    <!--
    User creation Fragment
    -->
    <string name="fragment_user_creation_title">User Setup</string>
    <string name="fragment_user_creation_first_name">First Name</string>
    <string name="fragment_user_creation_last_name">Last Name</string>
    <string name="fragment_user_creation_icon_description">Icon</string>
    <string name="fragment_user_creation_weight">Weight in kg</string>
    <string name="fragment_user_creation_birth_date">Birth date</string>
    <string name="fragment_user_creation_blood_type">Blood Type</string>
    <string name="fragment_user_creation_height">Height in cm</string>
    <string name="fragment_user_creation_select_a_theme">Select a theme</string>
    <string name="fragment_user_creation_upload_photo">Upload photo</string>
    <string name="fragment_user_creation_finish">Finish</string>
    <string name="fragment_user_creation_error_required">Required</string>
    <string name="fragment_user_creation_error_invalid">Contains non valid characters</string>

    <!--
    Vaccination Fragment
    -->
    <string name="fragment_vaccination_date">Vaccination Date</string>
    <string name="fragment_vaccination_vaccination">Vaccination</string>
    <string name="fragment_vaccination_refresh_date">Refresh Date</string>
    <string name="fragment_vaccination_expire_date">Expire Date</string>
    <string name="fragment_vaccination_doctor">Doctor</string>
    <string name="qr_code_view">qr_code</string>
    <string name="title_activity_introduction">IntroductionActivity</string>

    <!--
    Information Activity
    -->
    <string name="fragment_intro_introduction">Information</string>
    <string name="fragment_intro_notice_1">In the next step you will have to set a PIN. In order to use this app, a PIN is needed to secure your data.</string>
    <string name="fragment_intro_notice_2">In case you forget your PIN, the app has to be reset for security reasons.</string>
    <string name="fragment_intro_btn">OK</string>

    <!--
    Menu sort by
    -->
    <string name="menu_sort_by_all">All</string>
    <string name="menu_sort_by_scheduled">Scheduled</string>
    <string name="menu_sort_by_not_scheduled">Not scheduled</string>
    <string name="menu_sort_by_not_vaccinated">Not vaccinated</string>

    <!--
    vaccine fragment
    -->
    <string name="vaccine_nothing_found">No vaccinations</string>


    <!--
    Acitivity verification
    -->
    <string name="activity_verification_verified_by">Verified by</string>
    <string name="activity_verification_not_verified">Not verified!</string>

    <!--
    Reset App
    -->
    <string name="confirm_reset">This will reset the App and delete all your settings. Do you want to proceed?</string>
    <string name="title_reset">Reset</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="fragment_settings_Reset">Reset App?</string>


    <string name="fragments_settings_userID">User ID: </string>

</resources>