<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mobilehealthsports.vaccinepass.ui.pin.PinViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_pin_top_margin"
            android:text="@{viewModel.titleText}"
            android:textColor="@{context.getColor(viewModel.titleColor)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Enter PIN"
            tools:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/info_pin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_pin_recycler_margin"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pin_recyclerview"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/list_item_circle">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/line_recyclerview"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/list_item_line">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_pin_grid_top_margin"
            android:visibility="visible"
            app:columnCount="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:rowCount="4">

            <com.google.android.material.button.MaterialButton
                style="@style/PinButton"
                android:onClick="@{() -> viewModel.onPin('1')}"
                android:text="@string/pin_btn_1"
                app:layout_column="0"
                app:layout_row="0" />


            <com.google.android.material.button.MaterialButton
                style="@style/PinButton"
                android:onClick="@{() -> viewModel.onPin('2')}"
                android:text="@string/pin_btn_2"
                app:layout_column="1"
                app:layout_row="0" />

            <com.google.android.material.button.MaterialButton
                style="@style/PinButton"
                android:onClick="@{() -> viewModel.onPin('3')}"
                android:text="@string/pin_btn_3"
                app:layout_column="2"
                app:layout_row="0" />

            <com.google.android.material.button.MaterialButton
                style="@style/PinButton"
                android:onClick="@{() -> viewModel.onPin('4')}"
                android:text="@string/pin_btn_4"
                app:layout_column="0"
                app:layout_row="1" />

            <com.google.android.material.button.MaterialButton
                style="@style/PinButton"
                android:onClick="@{() -> viewModel.onPin('5')}"
                android:text="@string/pin_btn_5"
                app:layout_column="1"
                app:layout_row="1" />

            <com.google.android.material.button.MaterialButton
                style="@style/PinButton"
                android:onClick="@{() -> viewModel.onPin('6')}"
                android:text="@string/pin_btn_6"
                app:layout_column="2"
                app:layout_row="1" />

            <com.google.android.material.button.MaterialButton
                style="@style/PinButton"
                android:onClick="@{() -> viewModel.onPin('7')}"
                android:text="@string/pin_btn_7"
                app:layout_column="0"
                app:layout_row="2" />

            <com.google.android.material.button.MaterialButton
                style="@style/PinButton"
                android:onClick="@{() -> viewModel.onPin('8')}"
                android:text="@string/pin_btn_8"
                app:layout_column="1"
                app:layout_row="2" />

            <com.google.android.material.button.MaterialButton
                style="@style/PinButton"
                android:onClick="@{() -> viewModel.onPin('9')}"
                android:text="@string/pin_btn_9"
                app:layout_column="2"
                app:layout_row="2" />

            <com.google.android.material.button.MaterialButton
                style="@style/PinButton"
                android:onClick="@{() -> viewModel.onPin('0')}"
                android:text="@string/pin_btn_0"
                app:layout_column="1"
                app:layout_row="3" />

            <com.google.android.material.button.MaterialButton
                style="@style/PinButton"
                android:onClick="@{() -> viewModel.deleteLastEntry()}"
                android:text="@string/pin_btn_del"
                app:layout_column="2"
                app:layout_row="3" />

        </androidx.gridlayout.widget.GridLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_pin_btn_forgot_pin_top_margin"
            android:boolean_visibility="@{viewModel.pinState == viewModel.pinState.CHECK || viewModel.pinState == viewModel.pinState.CONFIRM}"
            android:onClick="@{() -> viewModel.forgotPin()}"
            android:text="@{viewModel.bottomText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
            app:strokeColor="?colorPrimary"
            tools:text="Forgot PIN?" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>